:ambulance: Fix long text wrap

--- a/src/u-form-item.vue/module.css
+++ b/src/u-form-item.vue/module.css
@@ -18,22 +18,22 @@
 }
 
 .message {
-    position: relative;
+    position: absolute;
+    left: 100%;
+    top: 0;
     display: none;
     margin-left: 10px;
     padding: 0 10px;
-    max-width: 300px;
     line-height: 26px;
     font-size: 12px;
-    white-space: nowrap;
 }
 
 
 .message[color="focus"] {
-    position: absolute;
-    display: inline-block;
+    display: block;
     padding: 3px 10px;
     height: auto;
+    width: 300px;
     background: #f7faff;
     color: #7dacde;
     border: 1px solid #d6e6fe;
@@ -41,7 +41,7 @@
 
 .message[color="focus"]:after, .message[color="focus"]:before {
     position: absolute;
-    content: ' ';
+    content: '';
     top: 10px;
     left: -8px;
     border: 4px solid transparent;
@@ -54,7 +54,9 @@
 }
 
 .message[color="error"] {
-    display: inline-block;
+    display: block;
+    margin: 3px 10px;
+    white-space: nowrap;
     background-color: #ff867f;
     color: #fff;
 }
